Release 0.9 (20 Jul 11)
====
- jIRCii now uses the Nimbus look and feel and Single Document Interface modes
  on all operating systems by default. This look is much more modern.
- Default fonts on Windows and OS X are now bolded
- Added new status and miscellaneous window icons
- Added some white-space to the right of the "close window" button in SDI mode
- Options window is wider to accomodate IRC network selector on OS X
- List windows (/list -gui and others) now use a different icon from the status
  window.
- Removed "Applications" configuration. jIRCii now uses Java's Desktop API to
  launch a URL.
- Removed "random servers" group from server connect dialog
- jIRCii is now friendly to the latest format of mIRC's servers.ini file
- Updated servers.ini to the latest from http://www.mirc.co.uk/servers.ini
- join/part messages in default theme now shows addresses
- /load can now load scripts contained inside of jerk.jar
- Removed black-listing of GTKLookAndFeel for Linux systems (set use Native L&F
  option to get it). After 7 years, it has matured enough to work with jIRCii
  [See Beta 15 notes].
- Updated jIRCii about dialog with new look jIRCii logo
- Added links to the bug tracker and jIRCii homepage in the Help menu
- Updated MacOS X and Windows icons to new jIRCii logo
- Updated Java Application Stub so jIRCii works with MacOS X Lion now.

Beta    45 release 22 Sept 09
====
- Fixed a bug preventing /list -gui window from being closed.  I couldn't
  let this one wait until the next release.
- Fixed tab command completion
- Upgraded to Sleep 2.1u4, several bug fixes and a few new features.  
- $mouse variable in on click/dclick events is now a java.awt.event.MouseEvent 
  object.  You can now call Java methods on this object if you need to.
- Ctrl+Tab now cycles jIRCii windows (similar to Ctrl+Right Arrow)
- fixed a bug with nick changes breaking jIRCii on InspIRCd servers
- jIRCii now supports ! and + channels.  Thanks creative IRCDs!  You're